fix: Import Package Fix and Navigation
What I had done:
- Modified package name to the correct import
- Implemented the navigation logic from v3.x/ViewModel
- Introduced JCEF (But cookieManager not usable in desktop)